--- a/2-test-module/index.html
+++ b/2-test-module/index.html
@@ -9,5 +9,11 @@
 <body>
     
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, asperiores?</p>
+    <ul>
+        <li>lorem</li>
+        <li>lorem</li>
+        <li>lorem</li>
+        <li>lorem</li>
+    </ul>
 </body>
 </html>
